[tool.poetry]
name = "logs"
version = "0.1.0"
description = "Exercise for cloudwalk"
authors = ["Leonardo Silva"]

[tool.poetry.dependencies]
python = "3.9.7"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
